AWS/networking/vpc.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Resources": {
        "myvpc": {
            "Type": "AWS::EC2::VPC",
            "Properties" : {
            "CidrBlock": "192.168.0.0/16",
            "EnableDnsHostnames": true,
            "InstanceTenancy": "default",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "Mynetwork"
                }
            ]
        }
    },
        "IGW": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Internet-gateway"
                    }
                ]
            }
        },
        "IGWattachtoVPC": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "InternetGatewayId": {
                    "Ref": "IGW"
                },
                "VpcId": {
                    "Ref": "myvpc"
                }
            }
        },
        "PublicRT": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "myvpc"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Public-RT"
                    }
                ]
            }
        },
        "routetoigw": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRT"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "IGW"
                }
            }
        },
        "PrivateRT": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "myvpc"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Private_RT"
                    }
                ]
            }
        },
        "Publicsubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "us-east-1a",
                "VpcId": {
                    "Ref": "myvpc"
                },
                "CidrBlock": "192.168.0.0/24",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Public-subnet"
                    }
                ]
            }
        },
        "associatepublicrt": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "Publicsubnet"
                },
                "RouteTableId": {
                    "Ref": "PublicRT"
                }
            }
        },
        "Privatesubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "us-east-1b",
                "VpcId": {
                    "Ref": "myvpc"
                },
                "CidrBlock": "192.168.1.0/24",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Private-Subnet"
                    }
                ]
            }
        },
        "associatetoprivatert": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "Privatesubnet"
                },
                "RouteTableId": {
                    "Ref": "PrivateRT"
                }
            }
        },
        "opessh": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Allow http to client host",
                "VpcId": {
                    "Ref": "myvpc"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 22,
                        "ToPort": 22,
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 80,
                        "ToPort": 80,
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                
                "Tags":[
                { "Key": "Name", "Value":  "Openssh" }
                ]
            }
        }
    }
}
